<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/headerProfile"
        android:padding="5dp">
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal">
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemurNameTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:text="@string/name_Title"
                                    android:textColor="#000"/>
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemurName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="#000"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal">
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemurAgeTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:text="@string/age_Title"
                                    android:textColor="#000"
                                    />
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemureAge"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="#000"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal">
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemurGenderTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:text="@string/gender_Title"
                                    android:textColor="#000"
                                    />
                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/lemurGender"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="#000"/>
                        </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurOriginTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/origin_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurOrigin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/lemurEntryDateTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/entryDate_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/lemurEntryDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurEntryNatureTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/entryNature_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurEntryNature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLastOwnerTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/lastOwner_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLastOwner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingDateTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/leavingDate_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingNatureTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/leavingNature_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingNature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingCommentaryTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/leavingCommentary_Title"
                            android:textColor="#000"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/LemurLeavingCommentary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000"/>
                    </LinearLayout>
                </LinearLayout>
        </ScrollView>
    </RelativeLayout>