<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:layout_below="@+id/headerCustomizeProfile"
    android:padding="5dp">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lemurNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/name_Title"
                    android:textColor="#000"/>
                <EditText
                    android:background="@color/ColoreditText"
                    android:labelFor="@+id/editlemurName"
                    android:id="@+id/editlemurName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lemurAgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/age_Title"
                    android:textColor="#000"
                    />
                <EditText
                    android:hint="blablabla"
                    android:labelFor="@+id/editlemurAge"
                    android:id="@+id/editlemureAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lemurGenderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/gender_Title"
                    android:textColor="#000"
                    />
                <EditText
                    android:labelFor="@+id/editlemurgender"
                    android:id="@+id/editLemurGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>