<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projet_100_heures.lemurrescuecenter.activity.CustomActivity"
    android:background="@color/colorBackground">

    <include
        android:layout_width="0dp"
        android:layout_height="48dp"
        layout="@layout/app_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/include" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="127dp"
        android:layout_height="112dp"
        android:src="@drawable/makicatta3"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="3dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/id_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editLemurNumIdTitle"
        app:layout_constraintRight_toLeftOf="@+id/editLemurNumId"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        android:textColor="@color/ap_black"/>

    <EditText
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editLemurNumId"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profileImage"
        app:layout_constraintVertical_bias="0.52"
        android:layout_marginEnd="50dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editLemurNumIdTitle"
        app:layout_constraintHorizontal_bias="1.0" />

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="297dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/editLemurNumIdTitle"
        android:background="@color/colorBackground"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/NomLemurien"
                android:background="@color/ColoreditText">

                <TextView
                    android:text="@string/name_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurNameTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurName"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/AgeLemurien">

                <TextView
                    android:text="@string/age_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurAgeTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurAge"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/SexL"
                android:background="@color/ColoreditText">
                <TextView
                    android:text="@string/gender_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurGenderTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurGender"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/OriginL">
                <TextView
                    android:text="Origine : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurOriginTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:id="@+id/editLemurOrigin"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lemurEntryDate"
                android:background="@color/ColoreditText">
                <TextView
                    android:text="Date d'entree : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editlemurEntryDateTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text=""
                    android:id="@+id/editlemurEntryDate"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LemurEntryNature">
                <TextView
                    android:text="Nature de l'entrée : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurEntryNatureTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurEntryNature"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LemurLastOwner"
                android:background="@color/ColoreditText">
                <TextView
                    android:text="Last Owner : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurLastOwnerTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurLastOwner"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LemurLeavingDate">
                <TextView
                    android:text="Date de départ : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurLeavingDateTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text=""
                    android:id="@+id/editLemurLeavingDate"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LemurLeavingNature"
                android:background="@color/ColoreditText">
                <TextView
                    android:text="Nature du départ : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurLeavingNatureTitle"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp"
                    android:textColor="@color/ap_black"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurLeavingNature"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/LemurLeavingCommentary">
                <TextView
                    android:text="Date de départ : "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLemurLeavingCommentaryTitle"
                    android:textColor="@android:color/background_dark"
                    android:layout_weight="0.5"
                    android:paddingLeft="6dp"
                    android:textStyle="normal|bold"
                    android:textSize="24sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:id="@+id/editLemurLeavingCommentary"
                    android:layout_weight="1"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:layout_width="60dp"
        app:srcCompat="@drawable/sign_check_icon"
        android:id="@+id/submitEdit"
        android:scaleType="fitEnd"
        android:background="@color/ap_transparent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editLemurNumIdTitle"
        android:layout_height="60dp" />

</android.support.constraint.ConstraintLayout>
